# bpsai-computer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.paircoder/: capabilities.yaml  config.yaml
.paircoder/context/: state.md
.paircoder/data/: store.db
.paircoder/feedback/: demand-signals.json
.paircoder/plans/: plan-2026-03-cd1.plan.yaml  plan-2026-03-cd2.plan.yaml  plan-sprint-0-engage.plan.yaml  plan-sprint-2-engage.plan.yaml  plan-sprint-3-engage.plan.yaml  plan-sprint-CD2-FIX-engage.plan.yaml
.paircoder/tasks/: CD1.1.task.md  CD1.2.task.md  CD1.3.task.md  CD2.1.task.md  CD2.2.task.md  CD2.3.task.md  CD3.1.task.md  CD3.2.task.md  CD3.3.task.md  CD3.4.task.md  CD3.5.task.md  CDF.1.task.md  CDF.2.task.md  CDF.3.task.md  CDF.4.task.md  DBS.1.task.md  DWC.1.task.md  DWC.2.task.md  MFVC.1.task.md  MFVC.2.task.md  (+7 more)
docs/: backlog-cd2-fixes.md  backlog-cd2.md
tests/: test_a2a_client.py  test_auth.py  test_cdf1_input_validation.py  test_cdf2_scrubbing.py  test_cdf3_lifecycle.py  test_cdf4_hardening.py  test_ci_collector.py  test_cli.py  test_config.py  test_contracts.py  test_contracts_permission.py  test_contracts_phase_c.py  test_contracts_security.py  test_contracts_severity.py  test_daemon.py  test_daemon_fleet.py  test_daemon_signals.py  test_dispatcher.py  test_git_collector.py  test_integration.py  test_jwt_e2e.py  test_license_discovery.py  test_lifecycle.py  test_message_router.py  test_permission_escalation.py  test_resume.py  test_scrubber.py  test_signal_pusher.py  test_streamer.py  test_workspace_isolation.py
(+136 files in other folders)
