[project]
name = "bpsai-computer"
version = "0.1.0"
description = "Computer₀ — workspace orchestrator and dispatch daemon"
requires-python = ">=3.11"
license = {text = "LicenseRef-Proprietary"}
authors = [{name = "BPS AI Software", email = "support@bpsaisoftware.com"}]
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "bpsai-agent-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[project.scripts]
bpsai-computer = "computer.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
